--- a/Handling missing values.ipynb
+++ b/Handling missing values.ipynb
@@ -28,7 +28,7 @@
    "id": "6f084be1-70eb-463f-8974-6ca738027c52",
    "metadata": {},
    "source": [
-    "<h1 style=\"color:black; background-color:white; padding:5px; padding-bottom:10px;text-align: center\">Methodology for dealing with missing values</h1>"
+    "<h1 style=\"color:black; background-color:white; padding:5px; padding-bottom:10px;text-align: center\">Methodology for handling missing values</h1>"
    ]
   },
   {
