Update Dealing with missing values.ipynb

--- a/Dealing with missing values.ipynb
+++ b/Dealing with missing values.ipynb
@@ -1093,20 +1093,22 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f921794-fa89-46e9-9cca-1bf109a5b912",
+   "cell_type": "markdown",
+   "id": "5268ea6d-2a99-4348-965a-c7a514f03c43",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7193c57e-85e8-42c9-866c-ec74ef5d5396",
+   "cell_type": "markdown",
+   "id": "ece78d02-e1a0-4c22-8497-574662974ea9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h3 style=\"color:black; background-color:white; padding:5px; padding-bottom:10px; margin-bottom:-10px\">2. Missing values by columns</h3>\n",
+    "<p style=\"color:black; background-color:white; padding:5px;\">\n",
+    "In this step, we run a check for missing values on all columns. As a result, the missing values will be presented as an absolute number and as a relative number. The relative is calculated based on the percentage of missing values of the column from all elements of the column itself.</p>"
+   ]
   },
   {
    "cell_type": "code",
