Update Dealing with missing values.ipynb

--- a/Dealing with missing values.ipynb
+++ b/Dealing with missing values.ipynb
@@ -1176,12 +1176,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5020ac50-c534-4144-af40-d93286ab6607",
+   "cell_type": "markdown",
+   "id": "048a3808-af2c-4807-87b8-586f5fe6f628",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "As we can see from the missing values plot above, all columns show roughly the same amount of values. They range from 24.32% to 43.24% without the presence of random variations and amplitudes."
+   ]
   },
   {
    "cell_type": "code",
