--- a/Dealing with missing values.ipynb
+++ b/Dealing with missing values.ipynb
@@ -1105,7 +1105,7 @@
    "id": "ece78d02-e1a0-4c22-8497-574662974ea9",
    "metadata": {},
    "source": [
-    "<h3 style=\"color:black; background-color:yellow; padding:5px; padding-bottom:10px; margin-bottom:-10px\">2. Missing values by columns</h3>\n",
+    "<h3 style=\"color:black; background-color:yellow; padding:5px; padding-bottom:10px; margin-bottom:-10px\">2. Missing values</h3>\n",
     "<p style=\"color:black; background-color:yellow; padding:5px;\">\n",
     "In this step, we run a check for missing values on all columns. As a result, the missing values will be presented as an absolute number and as a relative number. The relative is calculated based on the percentage of missing values of the column from all elements of the column itself.</p>"
    ]
@@ -1180,7 +1180,15 @@
    "id": "048a3808-af2c-4807-87b8-586f5fe6f628",
    "metadata": {},
    "source": [
-    "As we can see from the missing values plot above, all columns show roughly the same amount of values. They range from 24.32% to 43.24% without the presence of random variations and amplitudes."
+    "<p style=\"color:black; background-color:white; padding:5px;\">As we can see from the missing values plot above, all columns show roughly the same amount of values. They range from 24.32% to 43.24% without the presence of random variations and amplitudes.</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58ca770e-b174-4137-9572-009b16330478",
+   "metadata": {},
+   "source": [
+    "<p style=\"color:black; background-color:white; padding:5px;\">Let's look at the missing values in a graphical matrix to see if there are any patterns in the missing values.</p>"
    ]
   },
   {
