--- a/Dealing with missing values.ipynb
+++ b/Dealing with missing values.ipynb
@@ -36,9 +36,9 @@
    "id": "be09bd84-0920-4f69-8c05-26c63c3606fc",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:black; background-color:yellow; padding:5px; padding-bottom:10px; margin-bottom:-10px\">I. Introduction</h2>\n",
-    "<p style=\"color:black; background-color:yellow; padding:5px;\">\n",
-    "Data analysis is a fundamental tool for understanding the world around us. The study of dynamics, diversity, similarity, causality, gives us the opportunity to introduce seemingly chaotic processes into logical frameworks using models. But one of the main first steps for any researcher is to \"understand\" the data to be analyzed. It is precisely the missing parts of the data that appear to be one of the challenges underlying the objectivity of the subsequent tools and models that will be used. This paper attempts to present a methodology for in-depth analysis of missing data. In a logical sequence, the various tools for in-depth analysis of missing data will be revealed step by step.</p>"
+    "<h2 style=\"color:black; background-color:white; padding:5px; padding-bottom:10px; margin-bottom:-10px\">I. Introduction</h2>\n",
+    "<p style=\"color:black; background-color:white; padding:5px;\">\n",
+    "Handling missing data is an important step of any data analysis. In real life, the study of given processes and phenomena inevitably encounters missing data, which should be subject to preliminary analysis. To reveal the nature of the missing data in general, whether they are completely random, random or non-random. To think about what could be done with them so as not to distort the database drastically, but on the contrary to improve their suitability for objective analysis. This report provides an overview of possible tools for dealing with missing data. The emphasis is not on their research, which as a methodology was done in a previous report, but on working with them. Different methods of visualization, padding and removal are shown in order to enrich the theory and practice of data refinement as a pre-processing step in the field of economic data and others.</p>"
    ]
   },
   {
