--- a/Dealing with missing values.ipynb
+++ b/Dealing with missing values.ipynb
@@ -46,9 +46,19 @@
    "id": "62c112c8-d24a-4f56-bd23-badfc2e58afd",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:black; background-color:yellow; padding:5px; padding-bottom:10px; margin-bottom:-10px\">II. Theoretical foundations of missing data.</h2>\n",
-    "<p style=\"color:black; background-color:yellow; padding:5px;\">\n",
-    "    </p>\n"
+    "<h2 style=\"color:black; background-color:white; padding:5px; padding-bottom:10px; margin-bottom:-10px\">II. Theoretical foundations of missing data.</h2>\n",
+    "<p style=\"color:black; background-color:white; padding:5px; margin-bottom:-15px\"><b>Types of Missing data</b></p>\n",
+    "<ul style=\"color:black; background-color:white; padding:5px; margin-bottom:-10px\">There are four types of missing data:</ul>\n",
+    "<li style=\"color:black; background-color:white; padding:5px\">Missing completely at random (MCAR): The fact that it is missing is independent of the remaining variables.</li>\n",
+    "<li style=\"color:black; background-color:white; padding:5px\">Missing at random (MAR):  The missing value can roughly be interpolated from the remaining values to a reasonable degree of accuracy.</li>\n",
+    "<li style=\"color:black; background-color:white; padding:5px\">Missing not at random (MNAR): The reason why the data is missing is related to the remaining variables</li>\n",
+    "<li style=\"color:black; background-color:white; padding:5px\">Structurally Missing Data: The missing data is missing for а reason.</li>\n",
+    "\n",
+    "<p style=\"color:black; background-color:white; padding:5px;  margin-bottom:-15px\"><b>Methods for handling missing data</b></p>\n",
+    "<ul style=\"color:black; background-color:white; padding:5px; margin-bottom:-10px\">There are three methods at general:</ul>\n",
+    "<li style=\"color:black; background-color:white; padding:5px\">Remove the missing data;</li>\n",
+    "<li style=\"color:black; background-color:white; padding:5px\">Imputatе missing data;</li>\n",
+    "<li style=\"color:black; background-color:white; padding:5px\">Keep the missing values;</li>"
    ]
   },
   {
