Update Dealing with missing values.ipynb

--- a/Dealing with missing values.ipynb
+++ b/Dealing with missing values.ipynb
@@ -1303,6 +1303,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3cd6aa75-423d-49cf-93e6-91013c94d1d6",
+   "metadata": {},
+   "source": [
+    "<h3 style=\"color:black; background-color:white; padding:5px; padding-bottom:10px; margin-bottom:-10px\">3. Dealing with missing values</h3>\n",
+    "<p style=\"color:black; background-color:white; padding:5px;\">\n",
+    "The two main approaches to dealing with missing data is to remove or replace it. In this point, we will try to replace them using different methods and find the most accurate one.</p>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "216a843f-4e2e-4727-80ca-6055e55237bf",
