Update Dealing with missing values.ipynb

--- a/Dealing with missing values.ipynb
+++ b/Dealing with missing values.ipynb
@@ -3822,7 +3822,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def imp (df, df1 ): \n",
+    "def imputation_visual (df, df1 ): \n",
     "    df_fillna = df.copy()\n",
     "    df_fillna.fillna(method='ffill',inplace=True)\n",
     "    df_fillna.iloc[2,2:].plot(color='brown', marker='o', linestyle='dotted', figsize=(20,8), lw=5, ms=10)\n",
@@ -3880,6 +3880,14 @@
    ],
    "source": [
     "imp(df_minimum_wage_pps_missing_20, df_minimum_wage_pps_no_missing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf46005b-3422-431e-8e8f-65cc9c3a3078",
+   "metadata": {},
+   "source": [
+    "<p style=\"color:black; background-color:white; padding:5px;\">The graph clearly shows why IterativeImputer is most accurate in the original form of the database. Because many of the models handle columns, they take previous and next values that don't make sense because they belong to other countries. In this case, bfill and ffill, instead of using previous and subsequent values of Bulgaria, use values from neighboring countries with much higher minimum wage levels. The same thing happened with the algorithm linear intepolation. However, the two algorithms IterativeImputer and KNNImputer even visually do quite well. Let's now look at what happens with the transposed version of the database.</p>"
    ]
   },
   {
