Update Dealing with missing values.ipynb

--- a/Dealing with missing values.ipynb
+++ b/Dealing with missing values.ipynb
@@ -3879,7 +3879,7 @@
     }
    ],
    "source": [
-    "imp(df_minimum_wage_pps_missing_20, df_minimum_wage_pps_no_missing)"
+    "imputation_visual(df_minimum_wage_pps_missing_20, df_minimum_wage_pps_no_missing)"
    ]
   },
   {
@@ -4101,7 +4101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def imp1 (df, df1 ): \n",
+    "def imputation_visual_T (df, df1 ): \n",
     "    df_fillna = df.copy()\n",
     "    df_fillna.fillna(method='ffill',inplace=True)\n",
     "    df_fillna.iloc[:,2].plot(color='brown', marker='o', linestyle='dotted', figsize=(20,8), lw=5, ms=10)\n",
@@ -4155,7 +4155,7 @@
     }
    ],
    "source": [
-    "imp1(df_minimum_wage_pps_missing_T20, df_minimum_wage_pps_no_missing_T)"
+    "imputation_visual_T(df_minimum_wage_pps_missing_T20, df_minimum_wage_pps_no_missing_T)"
    ]
   },
   {
