Update Dealing with missing values.ipynb

--- a/Dealing with missing values.ipynb
+++ b/Dealing with missing values.ipynb
@@ -4159,28 +4159,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16a8db8d-25e9-42ad-881b-1d260d2634c9",
+   "cell_type": "markdown",
+   "id": "a823dd83-4c81-471a-b2c2-cfca84409965",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bac78c1f-1bb1-486c-9853-f0fb50c5519f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ba0003d-1e9a-44f9-8864-2a281ce6cfaa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<p style=\"color:black; background-color:white; padding:5px;\">In this case, the problems with some of the algorithms no longer occur. All manage to some extent to provide logical real predictive value. It is difficult to compare the algorithms for the two versions of the database - the original and the transposed one, because the missed values in the form of missing are random. Let's avoid that and deliberately remove some of the values. For example, from the 2nd row, every 5th, as well as every fifth column starting with the second.</p>"
+   ]
   },
   {
    "cell_type": "code",
@@ -4794,7 +4778,7 @@
     }
    ],
    "source": [
-    "df_minimum_wage_pps_no_missing1 = df_minimum_wage_pps_no_missing.copy()\n",
+    "df_minimum_wage_pps_missing_ = df_minimum_wage_pps_no_missing.copy()\n",
     "df_minimum_wage_pps_no_missing1.iloc[2::5, 2::5] = np.nan\n",
     "df_minimum_wage_pps_no_missing1"
    ]
