Update Dealing with missing values.ipynb

--- a/Dealing with missing values.ipynb
+++ b/Dealing with missing values.ipynb
@@ -3319,12 +3319,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d61947d-54a9-4de5-8939-df9d77a40ad3",
+   "cell_type": "markdown",
+   "id": "e50570dc-4768-442b-92c0-7e8f2d865a45",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<p style=\"color:black; background-color:white; padding:5px;\">Using non-random removal of values we can compare to what extent the correctly used database ie. in the form suitable for analysis is relevant for missing values analysis. The above graph shows the wrong previous and next value information because the columns are not related to the time series of countries. While the bottom graph clearly shows that the transposed graph gives adequate results because the column now follows the time order of each country. However, it is difficult on this type of timeline to see the performance of any single algorithm. Therefore, we will zoom in within a few years to see the behavior of more complex algorithms in detail.</p>"
+   ]
   },
   {
    "cell_type": "code",
@@ -3334,7 +3334,6 @@
    "outputs": [],
    "source": [
     "def imputation_visual_T_part (df, df1 ): \n",
-    "\n",
     "    df_knn = df.copy()\n",
     "    knn_imputer = KNNImputer(n_neighbors=2, weights=\"uniform\")    \n",
     "    df_knn1 = knn_imputer.fit_transform(df_knn)\n",
