--- a/Dealing with missing values.ipynb
+++ b/Dealing with missing values.ipynb
@@ -3383,9 +3383,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fcbda8ac-7c5f-4bde-8e26-35646ff09d9e",
+   "metadata": {},
+   "source": [
+    "<p style=\"color:black; background-color:white; padding:5px;\">The results show that to some extent ... and ... give real results. This is explained by the fact that in the economy, and not only in it, the time series values of individual indicators rarely change linearly. And for this reason, the two algorithms perform better.</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adf268b9-c978-4087-8ef9-5c09bede272e",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:black; background-color:yellow; padding:5px; padding-bottom:10px;\">IV. Conclusion</h2>\n",
+    "tuk имаме за базата данни от куде е и т.н."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b9676e9-468e-492f-9cbc-125eeef01393",
+   "id": "02b7c21b-4971-4f05-b626-0b1c3f192935",
    "metadata": {},
    "outputs": [],
    "source": []
