Update Dealing with missing values.ipynb

--- a/Dealing with missing values.ipynb
+++ b/Dealing with missing values.ipynb
@@ -44,7 +44,7 @@
     "<h2 style=\"color:black; background-color:white; padding:5px; padding-bottom:10px; margin-bottom:-10px\">I. Introduction</h2>\n",
     "<p style=\"color:black; background-color:white; padding:5px; margin-bottom:-10px\">\n",
     "Handling missing data is an important step of any data analysis. In real life, the study of given processes and phenomena inevitably encounters missing data, which should be subject to preliminary analysis. To reveal the nature of the missing data in general, whether they are completely random, random or non-random. To think about what could be done with them so as not to distort the database drastically, but on the contrary to improve their suitability for objective analysis. This report provides an overview of possible tools for dealing with missing data. The emphasis is not on their research, which as a methodology was done in a previous report, but on working with them. Different methods of visualization, padding and removal are shown in order to enrich the theory and practice of data refinement as a pre-processing step in the field of economic data and others. The minimum wage in the EU and countries close to the EU is used as an example database. Since the minimum wage is formed either on the basis of collective labor contracts, state decisions or on the basis of the change in basic parameters such as the average wage, etc. , its use is for purely educational purposes.</p>\n",
-    "<p style=\"color:black; background-color:white; padding:5px;\">In the present report, we will concentrate on the imputation of missing data and the applicability of the algorithms in the database used. The basic logarithms of Univariate and Multivariate Imputation will be used. Their behavior will be evaluated and visualized.</p>"
+    "<p style=\"color:black; background-color:white; padding:5px;\">In this paper, we will focus on the imputation of missing data and the applicability of the algorithms in the minimum wage example. The basic logarithms of Univariate and Multivariate Imputation will be used. Their behavior will be evaluated and visualized.</p>"
    ]
   },
   {
@@ -89,18 +89,15 @@
     "<p style=\"color:black; background-color:white; padding:5px;margin-bottom:-10px\">More information on Eurostat's minimum wage methodology please visit: https://ec.europa.eu/eurostat/cache/metadata/en/earn_minw_esms.htm </p>\n",
     "\n",
     "<p style=\"color:black; background-color:white; padding:5px;margin-bottom:-10px\"><b>Statistical concepts and definitions</b></p>\n",
-    "\n",
     "<p style=\"color:black; background-color:white; padding:5px;margin-bottom:-10px\">Minimum wage statistics refer to national minimum wages. The basic national minimum wage is fixed at an hourly, weekly or monthly rate, and this minimum wage is enforced by law (the government), often after consultation with the social partners, or directly by national intersectoral agreement. The national minimum wage usually applies to all employees, or at least to a large majority of employees in the country. Gross wages are reported</p>\n",
     "\n",
     "<p style=\"color:black; background-color:white; padding:5px;margin-bottom:-10px\"><b>Reference area</b></p>\n",
-    "\n",
     "<p style=\"color:black; background-color:white; padding:5px;margin-bottom:-10px\">Minimum wage statistics cover EU Member States and the candidate countries with a national minimum wage. The national minimum wage is in 21 of the EU Member States: Belgium, Bulgaria, Czechia, Germany (from 1 January 2015), Estonia, Ireland, Greece, Spain, France, Croatia, Latvia, Lithuania, Luxembourg, Hungary, Malta, the Netherlands, Poland, Portugal, Romania, Slovenia and Slovakia.  In all these countries, except Belgium, the national minimum wage is enforced by the government, often after consultation with the social partners. In Belgium, the national minimum wage is set by national intersectoral agreement and acquires legal force by royal decree. The following candidate countries have a national minimum wage: Albania, North Macedonia, Montenegro, Serbia and Turkey. Data cover also the USA having a national minimum wage. Country-specific information is available in annex.</p>\n",
     "\n",
     "<p style=\"color:black; background-color:white; padding:5px;margin-bottom:-10px\">There is no national minimum wage in 6 EU Member States and the EFTA countries (data is flagged (z)):Cyprus: minimum wages are set by the government for some specific occupations. Denmark, Italy, Austria, Finland and Sweden as well as Iceland, Norway and Switzerland: minimum wages are set by sectoral collective agreements. </p>\n",
-    "\n",
     "<p style=\"color:black; background-color:white; padding:5px;margin-bottom:-10px\">No EU aggregates are calculated due to the nature of the data: not all countries have a national minimum wage and the meaningfulness of a minimum wage at EU level (e.g. calculated as the mean of national minimum wages) is questionable.</p>\n",
-    "\n",
-    "<p style=\"color:black; background-color:white; padding:5px;\"><b>Reference Period</b>: Monthly minimum wages: 1 January (S1) and 1 July (S2)</p>"
+    "<p style=\"color:black; background-color:white; padding:5px;margin-bottom:-10px\"><b>Reference Period</b>: Monthly minimum wages: 1 January (S1) and 1 July (S2)</p>\n",
+    "<p style=\"color:black; background-color:white; padding:5px;margin-bottom:-10px\">More about the algorithms used in my current report visit: https://scikit-learn.org/stable/modules/impute.html#impute</p>"
    ]
   },
   {
