Update Dealing with missing values.ipynb

--- a/Dealing with missing values.ipynb
+++ b/Dealing with missing values.ipynb
@@ -72,12 +72,12 @@
    "id": "5feccfba-8507-4802-83cd-db388d4e5083",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:black; background-color:yellow; padding:5px; margin-bottom:-15px\">Content</h2>\n",
-    "<ul style=\"color:black; background-color:yellow; padding:5px; margin-bottom:-10px\">In this step, we familiarize ourselves with the data, its parameters and elements. Basic manipulations will be performed to help us use and better understand the elements to continue the research in the next steps. It includes the following manipulations: </ul>\n",
-    "<li style=\"color:black; background-color:yellow; padding:5px\">loading the databasess</li>\n",
-    "<li style=\"color:black; background-color:yellow; padding:5px\">extraction of uniqueness by features and observations</li>\n",
-    "<li style=\"color:black; background-color:yellow; padding:5px\">extraction basic information about the datas</li>\n",
-    "<li style=\"color:black; background-color:yellow; padding:5px\">dataframe trasnformation: features and rows manipulation and transformation</li>"
+    "<h2 style=\"color:black; background-color:white; padding:5px; margin-bottom:-15px\">Content</h2>\n",
+    "<ul style=\"color:black; background-color:white; padding:5px; margin-bottom:-10px\">The content of the report includes the following logical steps:</ul>\n",
+    "<li style=\"color:black; background-color:white; padding:5px\">Import the database</li>\n",
+    "<li style=\"color:black; background-color:white; padding:5px\">Check the missing values</li>\n",
+    "<li style=\"color:black; background-color:white; padding:5px\">Dealing with missing values</li>\n",
+    "<li style=\"color:black; background-color:white; padding:5px\">Visualization of imputation algorithms</li>"
    ]
   },
   {
@@ -97,7 +97,7 @@
     "<p style=\"color:black; background-color:white; padding:5px;margin-bottom:-10px\">There is no national minimum wage in 6 EU Member States and the EFTA countries (data is flagged (z)):Cyprus: minimum wages are set by the government for some specific occupations. Denmark, Italy, Austria, Finland and Sweden as well as Iceland, Norway and Switzerland: minimum wages are set by sectoral collective agreements. </p>\n",
     "<p style=\"color:black; background-color:white; padding:5px;margin-bottom:-10px\">No EU aggregates are calculated due to the nature of the data: not all countries have a national minimum wage and the meaningfulness of a minimum wage at EU level (e.g. calculated as the mean of national minimum wages) is questionable.</p>\n",
     "<p style=\"color:black; background-color:white; padding:5px;margin-bottom:-10px\"><b>Reference Period</b>: Monthly minimum wages: 1 January (S1) and 1 July (S2)</p>\n",
-    "<p style=\"color:black; background-color:white; padding:5px;margin-bottom:-10px\">More about the algorithms used in my current report visit: https://scikit-learn.org/stable/modules/impute.html#impute</p>"
+    "<p style=\"color:black; background-color:white; padding:5px;\">More about the algorithms used in my current report visit: https://scikit-learn.org/stable/modules/impute.html#impute</p>"
    ]
   },
   {
@@ -1193,7 +1193,7 @@
    "id": "ece78d02-e1a0-4c22-8497-574662974ea9",
    "metadata": {},
    "source": [
-    "<h3 style=\"color:black; background-color:white; padding:5px; padding-bottom:10px; margin-bottom:-10px\">2. Missing values</h3>\n",
+    "<h3 style=\"color:black; background-color:white; padding:5px; padding-bottom:10px; margin-bottom:-10px\">2. Check the missing values</h3>\n",
     "<p style=\"color:black; background-color:white; padding:5px;\">\n",
     "The purpose of this report is not to analyze missing data and search for patterns. However, there is no way to take steps to handle the missing data without revealing its size and type. This is exactly what is done below, outlining them as a size in absolute and relative value and also outlining their type through a structural matrix.</p>"
    ]
@@ -2304,6 +2304,16 @@
    "metadata": {},
    "source": [
     "<p style=\"color:black; background-color:white; padding:5px;\">The data shows that using the database in its original form the most accurate is IterativeImputer, while using the transposed variant this changes in favor of Linear-interpolate. Let's take a visual look at what happens through the following function which will visualize the action of the algorithms on one of the countries like Bulgaria.</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe77a50b-ed4c-4dd0-9e47-f70b6f6350e6",
+   "metadata": {},
+   "source": [
+    "<h3 style=\"color:black; background-color:white; padding:5px; padding-bottom:10px; margin-bottom:-10px\">4. Visualization of imputation algorithms</h3>\n",
+    "<p style=\"color:black; background-color:white; padding:5px;\">\n",
+    "After evaluating the accuracy of the algorithms, on the one hand we will see how they do by means of visualization. We will use both random and non-random data removal to compare the performance of the algorithms on both the original database and the transposed version.</p>"
    ]
   },
   {
