--- a/Dealing with missing values.ipynb
+++ b/Dealing with missing values.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "source": [
     "<h2 style=\"color:black; background-color:white; padding:5px; margin-bottom:-15px\">Content</h2>\n",
-    "<ul style=\"color:black; background-color:white; padding:5px; margin-bottom:-10px\">The content of the report includes the following logical steps:</ul>\n",
+    "<ul style=\"color:black; background-color:white; padding:5px; margin-bottom:-10px\">The content of the empirical part of the report includes the following logical steps:</ul>\n",
     "<li style=\"color:black; background-color:white; padding:5px\">Import the database</li>\n",
     "<li style=\"color:black; background-color:white; padding:5px\">Check the missing values</li>\n",
     "<li style=\"color:black; background-color:white; padding:5px\">Dealing with missing values</li>\n",
@@ -1322,6 +1322,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "60b61c73-107a-42ac-a303-f6d426e7d9c8",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3cd6aa75-423d-49cf-93e6-91013c94d1d6",
    "metadata": {},
    "source": [
@@ -2304,6 +2312,14 @@
    "metadata": {},
    "source": [
     "<p style=\"color:black; background-color:white; padding:5px;\">The data shows that using the database in its original form the most accurate is IterativeImputer, while using the transposed variant this changes in favor of Linear-interpolate. Let's take a visual look at what happens through the following function which will visualize the action of the algorithms on one of the countries like Bulgaria.</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "921c7fd3-d9fa-48f1-9349-5bf2e90c4267",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -3415,21 +3431,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adf268b9-c978-4087-8ef9-5c09bede272e",
+   "id": "08dd34a4-baf3-4a59-9fc1-4f163f53f7ab",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:black; background-color:yellow; padding:5px; padding-bottom:10px; margin-bottom:-10px\">IV. Conclusion</h2>\n",
-    "<p style=\"color:black; background-color:white; padding:5px;\">tuk имаме за базата данни от куде е и т.н.\n",
-    "</p>"
+    "---"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02b7c21b-4971-4f05-b626-0b1c3f192935",
+   "cell_type": "markdown",
+   "id": "adf268b9-c978-4087-8ef9-5c09bede272e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h2 style=\"color:black; background-color:white; padding:5px; padding-bottom:10px; margin-bottom:-10px\">IV. Conclusion</h2>\n",
+    "<p style=\"color:black; background-color:white; padding:5px;\">The task of this report was to test the applicability of algorithms for dealing with missing data on the example of economic statistics. Using a minimum wage database made it possible to test the accuracy of the algorithms when there are individual cases in time series. Database transformation was applied through transposition, revealing particular weaknesses of individual algorithms. The visualization made it possible to \"see\" how well the algorithms provide an adequate opportunity for use in the presence of missing data in economic statistics. Overall, the results are good, but no single algorithm has been shown to be absolutely accurate. Rather, the exploration of the data, the transformation of the database, the use and testing of the algorithms make it possible to \"recover\" the missing data in part of the time series.\n",
+    "</p>"
+   ]
   }
  ],
  "metadata": {
